BE - complete swagger setup
